--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
   "name": "tanstack-virtual-list",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
-  "license": "ISC",
-  "author": "",
+  "description": "react virtual list component.",
+  "keywords": [
+    "react",
+    "virtual-list",
+    "list",
+    "virtual",
+    "react-virtual"
+  ],
+  "license": "MIT",
+  "author": "linbudu",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LinbuduLab/tanstack-virtual-list"
+  },
+  "bugs": {
+    "url": "https://github.com/LinbuduLab/tanstack-virtual-list/issues"
+  },
+  "homepage": "https://tanstack-react-virtual.netlify.app",
+  "files": [
+    "dist/*"
+  ],
   "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc",
     "preview": "vite preview"
   },
   "peerDependencies": {
