--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "outDir": "dist",
+    "declaration": true,
     "jsx": "react-jsx",
 
     /* Linting */
