--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "cypress open --component"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "cypress": "^13.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
