--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vitest": "^1.1.3"
   },
   "dependencies": {
-    "@tanstack/react-virtual": "^3.0.1"
+    "@tanstack/react-virtual": "^3.0.1",
+    "clsx": "^2.1.0"
   }
 }
