--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "types": ["cypress", "node"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "*.cy.tsx"],
+  "exclude": ["node_modules", "dist", "src/**/*.cy.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
