--- a/package.json
+++ b/package.json
@@ -39,18 +39,19 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@types/node": "^20.11.13",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "cypress": "^13.6.2",
+    "cypress": "^13.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vitest": "^1.1.3"
+    "vite": "^5.0.12",
+    "vitest": "^1.2.2"
   },
   "dependencies": {
-    "@tanstack/react-virtual": "^3.0.1",
+    "@react-spring/web": "^9.7.3",
+    "@tanstack/react-virtual": "3.0.2",
     "clsx": "^2.1.0"
   }
 }
