--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
+    "build:website": "vite build",
     "build": "tsc",
     "preview": "vite preview",
     "test": "cypress open --component"
