--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ dist
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+.DS_Store
+
 # Runtime data
 pids
 *.pid
