--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tanstack-virtual-list",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "react virtual list component.",
   "keywords": [
     "react",
@@ -19,8 +19,15 @@
     "url": "https://github.com/LinbuduLab/tanstack-virtual-list/issues"
   },
   "homepage": "https://tanstack-react-virtual.netlify.app",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "files": [
-    "dist/*"
+    "dist/*",
+    "package.json",
+    "README.md",
+    "LICENSE"
   ],
   "type": "module",
   "main": "dist/index.js",
@@ -31,7 +38,8 @@
     "build:website": "vite build",
     "build": "tsc",
     "preview": "vite preview",
-    "test": "cypress open --component"
+    "test": "cypress open --component",
+    "prepublish": "npm run build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
