--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "types": ["cypress", "node"]
+    "types": ["cypress", "node"],
+    "paths": {
+      "tanstack-virtual-list": ["./src/index.tsx"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "src/**/*.cy.tsx"],
