--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
+    "jsx": "react-jsx",
     "moduleResolution": "bundler",
+    "types": ["cypress", "node"],
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "cypress", "src"]
 }
