--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cypress": "^13.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "type-fest": "^4.10.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vitest": "^1.2.2"
