--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,5 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "src/**/*.cy.tsx"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "exclude": ["node_modules", "dist"]
 }
